# swc-plugin-react-native-web

./: Cargo.toml  README.md  package.json
.cargo/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
example/: .gitignore  .swcrc  README.md  app.json  next.config.js  package-lock.json  package.json  webpack.config.js
example/pages/: _document.js  alternate.js  index.js
example/src/: App.jsx  index.html  index.jsx
src/: lib.rs  utils.rs
src/utils/: export_decl_visitor_utils.rs  get_dist_location.rs  import_decl_visitor_utils.rs  variable_declaration_visitor.rs
