[package]
name = "swc-plugin-react-native-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "0.27.4", features = ["ecma_visit", "ecma_ast", "plugin_transform"] }

[dev-dependencies]
swc_core = { version = "0.27.4", features = ["ecma_parser"] }

[profile.release]
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
